# praedoBrowser

./: CMakeLists.txt  CMakeListsLinux.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.txt  mainwindow_copy.cpp  mainwindow_copy.h  media.cpp  media.h  praedoBrowser.json  qtpasswordmanager.h  readme.md  resources.qrc  settings.cpp  settings.h  settings.txt  splittabwidget.h  windows-toolchain.cmake
fonts/: html response.txt  mainwindow.txt  media.txt  settings.txt
icons/: installer.sh  mainwindow.txt
